--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,46 @@ body {
     width: calc(100% - 20px);
   }
 }
+
+
+/* Progress bar styles */
+.progress-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #ddd; /* Gray background for the progress bar container */
+}
+
+.progress-bar {
+  height: 100%;
+  background-color: #377dff; /* Blue color for the progress bar */
+  width: 0; /* Initially set width to 0 */
+}
+  /* Logo styling */
+  .logo-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .logo {
+    width: 200px; /* Adjust logo size as needed */
+    height: auto;
+    animation: jumpAnimation 1s infinite alternate; 
+  }
+
+  /* Define jumping animation */
+  @keyframes jumpAnimation {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-10px);
+    }
+  }
