--- a/styles.css
+++ b/styles.css
@@ -134,45 +134,46 @@ body {
   }
 }
 
-
 /* Progress bar styles */
 .progress-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 5px;
-  background-color: #ddd; /* Gray background for the progress bar container */
+  height: 8px;
+  background-color: #ddd; 
 }
 
 .progress-bar {
   height: 100%;
-  background-color: #377dff; /* Blue color for the progress bar */
-  width: 0; /* Initially set width to 0 */
+  background-color: #377dff; 
+  width: 0; 
 }
-  /* Logo styling */
-  .logo-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .logo {
-    width: 200px; /* Adjust logo size as needed */
-    height: auto;
-    animation: jumpAnimation 1s infinite alternate; 
-  }
 
-  /* Define jumping animation */
-  @keyframes jumpAnimation {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(-10px);
-    }
+/* Logo styling */
+.logo-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: white; /* Add white background color to the logo container */
+}
+
+.logo {
+  width: 200px; /* Adjust logo size as needed */
+  height: auto;
+  animation: jumpAnimation 1s infinite alternate; 
+}
+
+/* Define jumping animation */
+@keyframes jumpAnimation {
+  0% {
+    transform: translateY(0);
   }
+  100% {
+    transform: translateY(-10px);
+  }
+}
